trying to fix viewport issue on iOS

--- a/style/style.css
+++ b/style/style.css
@@ -23,11 +23,10 @@ body {
   min-width: 150px;
   align-self: stretch;
 }
-/*.polaroids > div {
+.polaroids > div {
   margin: 10px;
   flex: 1;
-  min-width: 150px;
-}*/
+}
 .polaroids div {
   -webkit-transform: rotate(-2deg);
   -moz-transform: rotate(-2deg);
@@ -51,10 +50,10 @@ body {
 }
 
 /* On hover, darken the shadows a bit */
-/*.polaroids div > img {
+.polaroids div > img {
   -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.5);
   -moz-box-shadow: 0 3px 6px rgba(0,0,0,.5);
-}*/
+}
 .selected > img{
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
